--- a/activities/activity-01.qmd
+++ b/activities/activity-01.qmd
@@ -1,3 +1,19 @@
 ---
-title: "Activity 01"
+title: "Bivariate Viz Activities"
 ---
+```{r}
+# Load data
+elections <- read.csv("https://mac-stat.github.io/data/election_2020_county.csv")
+
+# Check it out
+head(elections)
+```
+```{r}
+library(ggplot2)
+ggplot(elections, aes(x=winner_20)) + geom_bar(fill="red")  + labs(title="Election Winners", x = "winner", y = "count")
+```
+
+```{r}
+library(ggplot2)
+ggplot(elections, aes(x=repub_pct_20, y=repub_pct_16)) + geom_point() + labs(title="Election Winners", x = "winner", y = "count")
+```
